<resources>
    <string name="app_name">21mmm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_share">分享</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="clazz_manage">课目管理</string>
    <string name="video_manage">视频管理</string>
    <string name="owner_clazz">购买的课程</string>
    <string name="my_order">我的订单</string>
    <string name="my_car">购物车</string>
    <string name="my_comment">我的评论</string>
    <string name="my_score">我的评分</string>
    <string name="upload">上传</string>

    <string name="loading">正在加载中。。。</string>
    <string name="loading_success">加载成功</string>
    <string name="loading_failed">加载失败</string>
    <string name="loading_timeout">加载超时</string>


</resources>
