<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_clazz_manage"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/clazz_manage"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_video_manage"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/video_manage"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_owner_clazz"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/owner_clazz"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_my_order"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/my_order"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_my_car"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/my_car"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_my_comment"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/my_comment"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/tv_my_score"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/my_score"
        android:textColor="#333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa" />

</merge>